--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -54,6 +54,14 @@
                     {{ .Summary }}
                   </div>
 
+                  {{- if and .Params.address .Params.postcode .Params.city .Params.addressLink }}
+                    <div class="post-address">
+                      <a href="{{ .Params.addressLink }}" target="_blank" rel="noopener" class="address-link">
+                        {{ .Params.address }}, {{ .Params.postcode }} {{ .Params.city }}
+                      </a>
+                    </div>
+                  {{- end }}
+
                   {{- if and .Page.Params.description .Site.Params.descriptionInPosts -}}
                     <span class="post-description">{{ .Page.Params.description }}</span>
                   {{- end }}
